--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typeorm",
+  "name": "@dl/typeorm",
   "private": true,
   "version": "0.2.11",
   "description": "Data-Mapper ORM for TypeScript, ES7, ES6, ES5. Supports MySQL, PostgreSQL, MariaDB, SQLite, MS SQL Server, Oracle, MongoDB databases.",
@@ -103,6 +103,7 @@
     "test": "rimraf ./build && tsc && mocha --file ./build/compiled/test/utils/test-setup.js --bail --recursive --timeout 60000 ./build/compiled/test",
     "compile": "rimraf ./build && tsc",
     "package": "gulp package",
+    "publish": "gulp publish",
     "lint": "tslint -p ."
   },
   "bin": {
